--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "volta": {
     "node": "18.19.1",
     "npm": "9.9.2"
