--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc --build && node ./scripts/copyUntypedFiles.mjs",
     "build:watch": "tsc --build --watch",
     "format": "prettier --write ./src"
   },
