--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,25 @@
 {
-  "references": [{"path": "./tsconfig.client.json"}],
   "compilerOptions": {
     /* Emit */
-    "target": "ES2020",
+    "target": "esnext",
     "lib": ["ESNext", "DOM"],
     "declaration": true,
-    // These two options will be selectively overridden in each project.
-    // Utility libraries will have source maps on, but plugins will not.
     "declarationMap": false,
     "sourceMap": false,
     "jsx": "react-native",
     "importHelpers": true,
     "noEmitHelpers": true,
-    // Will be overridden in client projects
-    "module": "NodeNext",
-    // Avoid accidentally using this config to build
-    // "noEmit": true,
+    "module": "esnext",
+    "composite": true,
+    "noEmit": false,
 
-    /* Strict Type-Checking Options */
     "allowUnreachableCode": false,
-    // Too hard to turn on
     "exactOptionalPropertyTypes": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    // `process.env` is usually accessed as property
     "noPropertyAccessFromIndexSignature": false,
     "noUncheckedIndexedAccess": true,
-    /* strict family */
     "strict": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
@@ -37,28 +29,24 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "useUnknownInCatchVariables": true,
-    /* Handled by ESLint */
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "importsNotUsedAsValues": "remove",
 
-    /* Module Resolution */
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "allowJs": true,
-    "skipLibCheck": true, // @types/webpack and webpack/types.d.ts are not the same thing
-
-    "noEmit": false,
+    "skipLibCheck": true,
     "incremental": true,
-    "tsBuildInfoFile": "./lib/.tsbuildinfo",
+    "tsBuildInfoFile": "./lib/.tsbuildinfo-client",
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "types": ["node", "@docusaurus/module-type-aliases"]
   },
-
-  "include": ["src"],
-  "exclude": ["src/client", "src/theme", "**/__tests__/**"]
+  "include": ["src/**/*", "src/**/*.d.ts"],
+  "exclude": ["tests/**"]
 }
