--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "build": "tsc --build && node ./scripts/copyUntypedFiles.mjs",
     "build:watch": "tsc --build --watch",
     "format": "prettier --write ./src",
-    "release": "npm run build && release-it"
+    "release": "npm run build && release-it",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@docusaurus/core": "^3.0.0",
@@ -48,7 +49,8 @@
     "prettier": "^3.2.5",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
-    "release-it": "^15.5.0"
+    "release-it": "^15.5.0",
+    "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "@docusaurus/core": ">=3.0.0",
