--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@docusaurus/utils": "^3.0.0",
     "@docusaurus/utils-validation": "^3.0.0",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
+    "@types/lodash": "^4.14.202",
     "prettier": "^3.2.5",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
@@ -84,5 +85,8 @@
       "release": true,
       "tokenRef": "GITHUB_AUTH"
     }
+  },
+  "dependencies": {
+    "lodash.merge": "^4.6.2"
   }
 }
