--- a/package.json
+++ b/package.json
@@ -15,26 +15,25 @@
   "sideEffects": [
     "*.css"
   ],
+  "type": "module",
   "exports": {
-    "./client": {
-      "types": "./lib/client/index.d.ts",
-      "default": "./lib/client/index.js"
-    },
     ".": {
-      "types": "./src/plugin-search-glean.d.ts",
-      "default": "./lib/index.js"
+      "require": "./lib/index.cjs",
+      "import": "./lib/index.js",
+      "types": "./src/plugin-search-glean.d.ts"
     }
   },
-  "main": "lib/index.js",
-  "types": "src/index.d.ts",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
+  "types": "./src/plugin-search-glean.d.ts",
   "files": [
     "lib",
     "CHANGELOG.md",
     "README.md"
   ],
   "scripts": {
-    "build": "tsc --build && node ./scripts/copyUntypedFiles.mjs",
-    "build:watch": "tsc --build --watch",
+    "build": "rimraf lib && tsup && node ./scripts/copyUntypedFiles.mjs",
+    "build:watch": "tsup --watch",
     "format": "prettier --write ./src",
     "release": "npm run build && release-it",
     "test": "vitest run"
@@ -51,6 +50,7 @@
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "release-it": "^15.5.0",
+    "tsup": "^8.0.2",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
