--- a/package.json
+++ b/package.json
@@ -15,28 +15,34 @@
   "sideEffects": [
     "*.css"
   ],
-  "type": "module",
   "exports": {
+    "./client": {
+      "types": "./lib/client/index.d.ts",
+      "default": "./lib/client/index.js"
+    },
     ".": {
-      "require": "./lib/index.cjs",
-      "import": "./lib/index.js",
-      "types": "./src/plugin-search-glean.d.ts"
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
     }
   },
-  "main": "./lib/index.cjs",
-  "module": "./lib/index.js",
-  "types": "./src/plugin-search-glean.d.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib",
     "CHANGELOG.md",
     "README.md"
   ],
   "scripts": {
-    "build": "rimraf lib && tsup && node ./scripts/copyUntypedFiles.mjs",
-    "build:watch": "tsup --watch",
+    "build": "tsc --build && node ./scripts/copyUntypedFiles.mjs",
+    "build:watch": "tsc --build --watch",
+    "copy:watch": "node ./scripts/copyUntypedFiles.js --watch",
     "format": "prettier --write ./src",
-    "release": "npm run build && release-it",
-    "test": "vitest run"
+    "release": "yarn build && release-it",
+    "test": "vitest run",
+    "watch": "run-p -c copy:watch build:watch"
+  },
+  "dependencies": {
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "@docusaurus/core": "^3.0.0",
@@ -46,11 +52,14 @@
     "@docusaurus/utils-validation": "^3.0.0",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.30",
     "prettier": "^3.2.5",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "release-it": "^15.5.0",
-    "tsup": "^8.0.2",
+    "run-p": "^0.0.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
@@ -65,7 +74,7 @@
   },
   "volta": {
     "node": "18.19.1",
-    "npm": "9.9.2"
+    "yarn": "1.22.22"
   },
   "publishConfig": {
     "access": "public",
@@ -85,8 +94,5 @@
       "release": true,
       "tokenRef": "GITHUB_AUTH"
     }
-  },
-  "dependencies": {
-    "lodash.merge": "^4.6.2"
   }
 }
