--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@docusaurus/core": "^3.0.0",
     "@docusaurus/module-type-aliases": "^3.0.0",
+    "@docusaurus/theme-common": "^3.2.1",
     "@docusaurus/types": "^3.0.0",
     "@docusaurus/utils": "^3.0.0",
     "@docusaurus/utils-validation": "^3.0.0",
