Convert to @gleanwork/web-sdk for types

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "watch": "run-p -c copy:watch build:watch"
   },
   "dependencies": {
+    "@gleanwork/web-sdk": "^1.0.1",
     "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
