--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build:watch": "tsc --build --watch",
     "copy:watch": "node ./scripts/copyUntypedFiles.js --watch",
     "format": "prettier --write ./src",
+    "lint": "eslint --cache --report-unused-disable-directives ./src",
     "release": "yarn build && release-it",
     "test": "vitest run",
     "watch": "run-p -c copy:watch build:watch"
@@ -55,6 +56,15 @@
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "eslint": "^8.45.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "^3.2.5",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
