--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,7 @@ jobs:
         run: yarn
       - name: build
         run: yarn build
+      - name: lint
+        run: yarn lint
       - name: test
         run: yarn test
