--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node: ['18', '20']
+        node: ['18', '20', '22']
 
     steps:
       - uses: actions/checkout@v4
