--- a/package.json
+++ b/package.json
@@ -47,32 +47,32 @@
     "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
-    "@docusaurus/core": "^3.0.0",
-    "@docusaurus/module-type-aliases": "^3.0.0",
-    "@docusaurus/theme-common": "^3.2.1",
-    "@docusaurus/types": "^3.0.0",
-    "@docusaurus/utils": "^3.0.0",
-    "@docusaurus/utils-validation": "^3.0.0",
-    "@release-it-plugins/lerna-changelog": "^7.0.0",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^8.45.0",
+    "@docusaurus/core": "3.8.1",
+    "@docusaurus/module-type-aliases": "3.8.1",
+    "@docusaurus/theme-common": "3.8.1",
+    "@docusaurus/types": "3.8.1",
+    "@docusaurus/utils": "3.8.1",
+    "@docusaurus/utils-validation": "3.8.1",
+    "@release-it-plugins/lerna-changelog": "7.0.0",
+    "@types/lodash": "4.17.20",
+    "@types/node": "20.19.4",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "eslint": "8.57.1",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.4",
+    "eslint-import-resolver-typescript": "3.10.1",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "prettier": "^3.2.5",
-    "react": "^18.0.2",
-    "react-dom": "^18.0.2",
-    "release-it": "^17.10.0",
+    "prettier": "3.6.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "release-it": "17.11.0",
     "run-p": "^0.0.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "vitest": "^1.3.1"
+    "tslib": "2.8.1",
+    "typescript": "5.8.3",
+    "vitest": "1.6.1"
   },
   "peerDependencies": {
     "@docusaurus/core": ">=3.0.0",
