--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "arrowParens": "always",
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "lf"
 }
