--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "copy:watch": "node ./scripts/copyUntypedFiles.js --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint --cache --report-unused-disable-directives ./src",
+    "prepare": "yarn build",
     "release": "rm -rf lib && yarn build && release-it",
     "test": "vitest run",
     "test:all": "yarn lint && yarn test",
