chore: Updates @gleanwork/web-sdk

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "watch": "run-p -c copy:watch build:watch"
   },
   "dependencies": {
-    "@gleanwork/web-sdk": "^2.1.0",
+    "@gleanwork/web-sdk": "^2.2.0-next.0",
     "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
